--- a/app/views/results/_form.html.erb
+++ b/app/views/results/_form.html.erb
@@ -1,19 +1,27 @@
-  <script>
-    function hide() {
-    obj = document.getElementById("create-competition").setAttribute("hidden", true);
-    }
+<script>
+function hide(selector) {
+    obj = document.getElementById(selector).setAttribute("hidden", true);
+}
 
-        function show() {
-    obj = document.getElementById("create-competition").removeAttribute("hidden");
-    }
+function show(selector) {
+    obj = document.getElementById(selector).removeAttribute("hidden");
+}
 
-    function myFunction() {
-      aaa = document.getElementById("result_competition_id").value;
-      if (aaa == "New")  { show(); }
-       else { hide(); }
-     }
-  </script>
-  <body onload="myFunction()"></body>
+function visibility(text) {
+    if (text == "create-competition") {
+        competition_visibility(text);
+    } else {
+        result_visibility(text);
+    }
+}
+
+function competition_visibility(text) {
+    aaa = document.getElementById("result_competition_id").value;
+    if (aaa == "New") { show(text); } else { hide(text); }
+}
+</script>
+
+<body onload="myFunction()"></body>
 <% fields = [
     ["place", "number"],
     ["runner", @runners, ["name", "surname"], "id"],
@@ -21,8 +29,7 @@
     ["category", @categories,["full_name"], "id"],
     ["competition", @competitions, ["name", "distance_type"], "id"]
 ] %>
-
-  <% extra_fields = [
+<% competition_fields = [
   ["competition_name", "text"],
   ["date", [], "date"],
   ["location", "text"],
@@ -30,5 +37,4 @@
   ["group", "text"],
   ["distance_type", "text"],
 ] %>
-<%= render partial: '/layouts/form', :locals => { :elements => fields, :model => result, :extra => extra_fields, :hidden => false} %>
-<%= @aaa %>
+<%= render partial: '/layouts/form', :locals => { :elements => fields, :model => result, :competition_extra => competition_fields, :hidden => false} %>
