--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom navbar navbar-light" style="background-color: #e3f2fd;">
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-
+<li> <%=link_to  image_tag("http://orienteering.md/wp-content/uploads/2021/05/logo_fos.png", class: "header-logo"), root_path, class: "logo nav-link" %></li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Database
