--- a/app/views/competitions/show.html.erb
+++ b/app/views/competitions/show.html.erb
@@ -10,7 +10,8 @@
 
 
 <%= render partial: '/layouts/show', :locals => { :elements => fields} %>
-<%= button_tag :class => "btn btn-warning", :name => 'count' do %> Delete selected <% end %>
+<td><%= link_to 'COunt', rang_path(@competition) , class: "btn btn-warning btn-sm"%></td>
+
 <br>
 <%= render partial: '/layouts/index'%>
 <%= render partial: '/layouts/show_actions', :locals => { :element => fields.first} %>
