--- a/app/views/competitions/_form.html.erb
+++ b/app/views/competitions/_form.html.erb
@@ -5,6 +5,7 @@
   ["country", "text"],
   ["group", "text"],
   ["distance_type", "text"],
+  ["clasa", ["MSRM", "CMSRM", "Seniori", "Juniori"], "select"],
   ["rang", "text"]
 ] %>
 <%= render partial: '/layouts/form', :locals => { :elements => fields, :model => competition} %>
