--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -19,13 +19,11 @@
                 Add to Database
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <%=link_to 'Add Clubs',        new_club_path,        class: "dropdown-item" %>
-                <%=link_to 'Add Runners',      new_runner_path,      class: "dropdown-item" %>
-                <%=link_to 'Add Competitions', new_competition_path, class: "dropdown-item" %>
-                <%=link_to 'Add Results',      new_result_path,      class: "dropdown-item" %>
-
-                <%=link_to 'Add Competitions from file', competition_file_path, class: "dropdown-item" %>
-                <%=link_to 'Add Runners from file',      runner_file_path,      class: "dropdown-item" %>
+                <%=link_to 'Add Clubs',        new_club_path,         class: "dropdown-item" %>
+                <%=link_to 'Add Runners',      new_runner_path,       class: "dropdown-item" %>
+                <%=link_to 'Add Competitions', new_competition_path,  class: "dropdown-item" %>
+                <%=link_to 'Add Results',      new_result_path,       class: "dropdown-item" %>
+                <%=link_to 'Add from file',    competition_file_path, class: "dropdown-item" %>
             </div>
         </li>
 
