--- a/app/views/home/merge.html.erb
+++ b/app/views/home/merge.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag compare_path do %>
+<%= form_tag merge_path do %>
 <label for="id">First Runner</label>
 <% if @runner %>
 <%=select_tag :first_name, options_for_select(@runners.map{ |runner| ["#{runner.name} #{runner.surname}", runner.id] }, ["#{@runner.name} #{@runner.surname}", @runner.id])%>
@@ -8,7 +8,4 @@
 <label for="id">Second Runner</label>
 <%= select_tag :second_name, options_for_select(@runners.map{ |runner| ["#{runner.name} #{runner.surname}", runner.id] }) %>
 <%= submit_tag "Submit" %>
-<% end %>
-<% if  @runner_one && @runner_two %>
-<%= render 'compare', runner_one: @runner_one, runner_two: @runner_two, runner_one_wins: @runner_one_wins, runner_two_wins: @runner_two_wins  %>
 <% end %>
